2014-01-27  Darryl McClymont  <darryl.mcclymont@gmail.com>

	* matlab/DiffusionMRIToolbox/fit_DT.m (0.1.6)

	- Modified the argument for skipping voxels. Can now be either
	a scalar threshold or a mask.

	* matlab/FiltersToolbox/forward_TV.m: (0.1.2)

	- Added missing details in help header.

2015-01-27  Benjamin Villard <b.016434@gmail.com>

	* matlab/FiltersToolbox/scimat_crop.m (0.2.1)

	- Modified scimat_crop.m to allow cropping of 4D volumes.

2015-01-21  Ramon Casero  <rcasero@gmail.com>

	* matlab/FilesFormatToolbox/load_dcm.m (0.1.1)

	- Fix help header. Part of the copyright notice missing. Help
	header has to be separated from copyright notice. Make similar to
	other Gerardus functions.

2015-01-21  Benjamin Villard  <b.016434@gmail.com>

	* Add matlab/FilesFormatToolbox/load_dcm.m (0.1.0)

	-LOAD_DCM Load array of DICOM filenames as 3D+t image and
	metainformation matrix.

	* matlab/FileFormatToolbox/load_multi_dcm_dir.m: (0.2.0)

	- Modifications. Changed the output to include Dicomdirpath, and
	added the SVM properties.

2014-01-14  Darryl McClymont  <darryl.mcclymont@gmail.com>

	* Add matlab/DiffusionMRIToolbox/wild_bootstrapping_DTI.m (0.1.1)

	- Returns uncertainty measures from diffusion tensor images via
	wild bootstrapping. See Whitcher 2008 - Using the Wild Bootstrap
	to Quantify Uncertainty in Diffusion Tensor Imaging

2014-01-14  Christopher Kelly  <christopher.kelly28@googlemail.com>

	* matlab/FileFormatToolbox/load_multi_dcm_dir.m: (0.1.0)

	- Modifications to original third party function
	matlab/ThirdPartyToolbox/loaddcmdir.m.

	- Interface changed to give preview of image.

	- Allows the selection of multiple series.

	- Fewer output arguments, now the only output contains the
	information of the series selected.

	* Copy matlab/ThirdPartyToolbox/license-loaddcmdir.txt to
	matlab/FileFormatToolbox/license-load_multi_dcm_dir.txt:
	* Copy matlab/ThirdPartyToolbox/loaddcmdir.m to
	matlab/FileFormatToolbox/load_multi_dcm_dir.m:
